# academic-advisor

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
data/seed/: courses.csv
docs/: academic_policies.md  course_requirements.md  meng_program.md  meng_project.md
src/agent/: llm.py  sql_guard.py
src/agent/tools/: doc_tool.py  sql_tool.py
src/db/: check.py  connection.py  schema.sql  seed.py
src/rag/: chunker.py  embedder.py  ingest.py  retrieve.py
