[project]
name = "academic-advisor"
version = "0.1.0"
description = "Agentic AI for Carleton graduate course exploration"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "sentence-transformers>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.7", "mypy>=1.13"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
